--- a/src/Snakefile
+++ b/src/Snakefile
@@ -101,7 +101,7 @@ rule all:
         "results/alpine_fit_plots/UHR_degraded/",
         "results/alpine_fit_plots/UHR/",
         "results/alpine_fit_plots/mouse_muscle/",
-        "results/hexamer_correlations/liver.hexamer_correlations.txt",
+        "results/hexamer_correlation/liver.hexamer_correlations.txt",
         "results/transcript_coverage_plots/human_PBMCs/",
         "results/coverage_type_comparison/liver/",
         #"results/alpine_rnafold_fits/liver/",
@@ -169,7 +169,7 @@ checkpoint extract_fastq:
 
 rule process_fastqs:
     input:
-        read_dir = "data/{sample_id}/fastq"
+        read_dir = lambda wildcards: checkpoints.extract_fastq.get(sample_id = wildcards.sample_id).output[0]
     output:
         read_dir = directory("data/{sample_id}/processed_fastqs/")
     run:
@@ -610,13 +610,19 @@ rule correlate_hexamer_bias:
     output:
         corr = "data/{sample_id}/hexamer_correlation.txt"
     script:
-        "scripts/correlate_hexamer_bias.R"
+        "scripts/correlate_hexamer_bias.py"
 
 rule aggregate_hexamer_correlation:
     input:
-        hexamer = lambda wildcards: expand("data/{sample_id}/hexamer_correlation.txt", sample_id=samples_by_tissue[wildcards.tissue])
+        hexamer = lambda wildcards: [f"data/{sample_id}/hexamer_correlation.txt" for sample_id in samples_by_tissue[wildcards.tissue]
+                                            if get_strandedness(sample_id) == "reverse" and is_paired(sample_id)]
     output:
-        "results/hexamer_correlations/{tissue}.hexamer_correlations.txt",
+        "results/hexamer_correlation/{tissue}.hexamer_correlations.txt",
     run:
         import polars as pl
-        pl.concat(pl.read_csv(hex, separator="\t") for hex in input.hexamer).write_csv(output, separator="\t")
+        data = []
+        for file in input.hexamer:
+            sample_id = pathlib.Path(file).parent.name
+            study = samples_by_id[sample_id]['study']
+            data.append(pl.read_csv(file, separator="\t").with_columns(sample_id=pl.lit(sample_id), study = pl.lit(study)))
+        pl.concat(data).write_csv(output[0], separator="\t")
